# YoGa_Bringing_The_Worlds_Together

./: README.md  pyproject.toml
yoga-ai/: pyproject.toml
yoga-ai/app/: main.py
yoga-ai/data/: README.md
yoga-ai/model_data/: labels.npy  y.npy
yoga-ai/models/: yoga_lstm.pth
yoga-ai/src/: explaining the philosophy  extract_data.py  model.py  pose_engine.py  train_model.py
