[tool.poetry]
name = "yoga-ai"
version = "0.1.0"
description = "Computer Vision Pose Correction Engine"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = "^4.8.0"  # CV2 for servers
mediapipe = "^0.10.9"              # The Pose Model
numpy = "^1.26.0"
streamlit = "^1.32.0"
pillow = "^10.2.0"
streamlit-webrtc = "^0.64.0"
av = "^16.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"